tests/consteval_diag_non_const_message_bad.stderr
tests/consteval_diag_non_const_message_bad.sl:9:17: error: SL2073: diagnostic message must be a const-evaluable string
